2009-09-16 delx
	* Fixed CMD-num tab switching (#2271203)
	* Improved performance, blank lines are no longer constantly regenerated

2009-09-15 delx
	* Fixed handling of overflow on full scrollback
	* Update text selection so it stays correct
	* Only redraw the new line, not the whole screen
	* Pay better attention to refresh rate timer

2009-06-11 delx
	* PTYTask spawns a separate thread to call select() on all the pipes.
	  Previously NSFileHandle would create a new thread of each pipe that
	  was being waited on.
	* This extra thread is used to perform read/write operations in 2048-byte
	  chunks from each pipe. This greatly improves interactivity.
	* Entering a different runloop mode no longer blocks PTYTask read/write
	  or drawing. Fixes #2682132
	* Automatically set the version number in target plist as part of the
	  xcode build phase. Dev versions get svn revisions & Deployment gets
	  the current date.

2009-06-09 delx
	* Always disable Apple's smooth scrolling to avoid drawing corruption
	* Fixed xterm window title reporting

2009-05-08 delx
	* PTYTextView now uses the Cocoa drawing machinery as Apple intended.
	  This means dirty flagged chars are converted into dirty rectangles.
	  No more forceUpdate, drawRect draws the rectangle it is given. It does
	  check needsToDrawRect for each line to avoid overdrawing.  This should
	  hopefully make drawing more reliable on Tiger and Leopard.
	* Selected text will now be invalidated only one of the characters in the
	  selection is changed.
	* The end result of these changes should be fast drawing on all OSes
	  with all the features of previous versions restored.
	* If no working directory is specified then new tabs will open in the
	  same directory as the previous session. This doesn't work with the
	  default settings yet. Need to execute the user's login shell directly
	  rather than using 'login -fp' to do it for us.
	* Clear the bell symbol upon any key press